# my_helios_ble_usb_cdc

./: CMakeLists.txt  HeliosProject.vgdbproj  prj.conf
boards/arm/helios_nrf52840/: Kconfig.board  Kconfig.defconfig  helios_nrf52840.dts  helios_nrf52840.yaml  helios_nrf52840_defconfig
src/: ble_serial.c  ble_serial.h  cmd_parser.c  cmd_parser.h  helios_ble.c  helios_ble.h  main.c  serial.c  serial.h  serial_internal.c  serial_internal.h  uart_serial.c  uart_serial.h
